tiffany-ui/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_and_queued_messages_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)

• Queued follow-up inputs: 1 item(s)
  1. Queued follow-up question
    ⌥ + ↑ edit last queued message

› Ask tiffany-loop to do anything

  ? for shortcuts            100% context left
